# serializer version: 1
# name: test_han_batzle_live_oil_density
  array([708.59222267, 708.46131387, 708.33027823, 708.19911735,
         708.06783277, 707.93642603, 707.8048986 , 707.67325196,
         707.54148754, 707.40960673, 707.2776109 , 707.14550139,
         707.01327953, 706.88094659, 706.74850384, 706.61595251,
         706.4832938 , 706.35052891, 706.21765898, 706.08468516,
         705.95160855, 705.81843024, 705.6851513 , 705.55177277,
         705.41829567, 705.28472101, 705.15104977, 705.0172829 ,
         704.88342135, 704.74946603, 704.61541785, 704.4812777 ,
         704.34704644, 704.21272491, 704.07831395, 703.94381437,
         703.80922697, 703.67455253, 703.53979181, 703.40494556,
         703.27001451, 703.13499939, 702.9999009 , 702.86471972,
         702.72945653, 702.594112  , 702.45868676, 702.32318146,
         702.18759672, 702.05193314, 701.91619131, 701.78037183,
         701.64447527, 701.50850218, 701.37245311, 701.2363286 ,
         701.10012917, 700.96385535, 700.82750762, 700.6910865 ,
         700.55459245, 700.41802596, 700.28138749, 700.14467748,
         700.00789639, 699.87104465, 699.73412269, 699.59713091,
         699.46006974, 699.32293956, 699.18574077, 699.04847375,
         698.91113888, 698.77373652, 698.63626703, 698.49873076,
         698.36112806, 698.22345925, 698.08572467, 697.94792464,
         697.81005948, 697.67212948, 697.53413496, 697.3960762 ,
         697.2579535 , 697.11976712, 696.98151736, 696.84320448,
         696.70482873, 696.56639039, 696.42788969, 696.28932688,
         696.15070221, 696.0120159 , 695.87326819, 695.7344593 ,
         695.59558945, 695.45665885, 695.31766771, 695.17861623,
         695.03950461])
# ---
# name: test_han_batzle_live_oil_velocity
  array([1068.77712019, 1068.26098675, 1067.74697984, 1067.23509946,
         1066.72534561, 1066.21771829, 1065.71221751, 1065.20884325,
         1064.70759553, 1064.20847434, 1063.71147969, 1063.21661156,
         1062.72386997, 1062.2332549 , 1061.74476637, 1061.25840437,
         1060.77416891, 1060.29205997, 1059.81207757, 1059.3342217 ,
         1058.85849236, 1058.38488955, 1057.91341327, 1057.44406353,
         1056.97684031, 1056.51174363, 1056.04877348, 1055.58792986,
         1055.12921278, 1054.67262222, 1054.2181582 , 1053.76582071,
         1053.31560975, 1052.86752532, 1052.42156742, 1051.97773606,
         1051.53603123, 1051.09645293, 1050.65900116, 1050.22367592,
         1049.79047721, 1049.35940504, 1048.9304594 , 1048.50364029,
         1048.07894771, 1047.65638166, 1047.23594215, 1046.81762916,
         1046.40144271, 1045.98738279, 1045.5754494 , 1045.16564254,
         1044.75796222, 1044.35240843, 1043.94898116, 1043.54768043,
         1043.14850624, 1042.75145857, 1042.35653743, 1041.96374283,
         1041.57307476, 1041.18453322, 1040.79811821, 1040.41382974,
         1040.03166779, 1039.65163238, 1039.2737235 , 1038.89794115,
         1038.52428533, 1038.15275605, 1037.78335329, 1037.41607707,
         1037.05092738, 1036.68790422, 1036.32700759, 1035.9682375 ,
         1035.61159394, 1035.2570769 , 1034.9046864 , 1034.55442243,
         1034.206285  , 1033.86027409, 1033.51638972, 1033.17463188,
         1032.83500057, 1032.49749579, 1032.16211754, 1031.82886583,
         1031.49774065, 1031.16874199, 1030.84186988, 1030.51712429,
         1030.19450523, 1029.87401271, 1029.55564671, 1029.23940725,
         1028.92529432, 1028.61330793, 1028.30344806, 1027.99571473,
         1027.69010793])
# ---
# name: test_live_oil_batzle_wang
  tuple(
    array([979.59467192, 979.10357976, 978.6165661 , 978.1336357 ,
         977.65479338, 977.18004389, 976.70939204, 976.2428426 ,
         975.78040036, 975.32207008, 974.86785654, 974.41776452,
         973.97179879, 973.52996412, 973.09226528, 972.65870703,
         972.22929413, 971.80403135, 971.38292345, 970.96597518,
         970.55319131, 970.14457658, 969.74013575, 969.33987356,
         968.94379478, 968.55190414, 968.16420639, 967.78070627,
         967.40140852, 967.02631788, 966.65543909, 966.28877688,
         965.926336  , 965.56812115, 965.21413709, 964.86438853,
         964.51888021, 964.17761684, 963.84060314, 963.50784385,
         963.17934366, 962.85510732, 962.53513951, 962.21944497,
         961.90802839, 961.6008945 , 961.29804799, 960.99949357,
         960.70523594, 960.41527981, 960.12962988, 959.84829083,
         959.57126738, 959.29856421, 959.03018601, 958.76613748,
         958.5064233 , 958.25104817, 958.00001675, 957.75333375,
         957.51100383, 957.27303168, 957.03942198, 956.81017939,
         956.58530861, 956.36481428, 956.1487011 , 955.93697372,
         955.72963681, 955.52669503, 955.32815306, 955.13401554,
         954.94428714, 954.75897252, 954.57807633, 954.40160322,
         954.22955785, 954.06194486, 953.89876891, 953.74003464,
         953.5857467 , 953.43590973, 953.29052836, 953.14960724,
         953.01315101, 952.8811643 , 952.75365174, 952.63061798,
         952.51206763, 952.39800532, 952.28843569, 952.18336335,
         952.08279294, 951.98672906, 951.89517635, 951.80813941,
         951.72562287, 951.64763134, 951.57416943, 951.50524174,
         951.4408529 ]),
    array([702.1346612 , 701.87542865, 701.61633703, 701.35738629,
         701.09857638, 700.83990723, 700.5813788 , 700.32299103,
         700.06474387, 699.80663726, 699.54867114, 699.29084547,
         699.03316018, 698.77561522, 698.51821054, 698.26094608,
         698.00382178, 697.74683759, 697.48999345, 697.23328931,
         696.9767251 , 696.72030078, 696.46401629, 696.20787156,
         695.95186655, 695.69600119, 695.44027543, 695.18468922,
         694.92924249, 694.67393518, 694.41876725, 694.16373862,
         693.90884926, 693.65409908, 693.39948805, 693.14501609,
         692.89068316, 692.63648919, 692.38243412, 692.1285179 ,
         691.87474047, 691.62110176, 691.36760173, 691.11424031,
         690.86101743, 690.60793305, 690.35498711, 690.10217953,
         689.84951027, 689.59697926, 689.34458645, 689.09233177,
         688.84021517, 688.58823657, 688.33639594, 688.08469319,
         687.83312828, 687.58170114, 687.33041171, 687.07925994,
         686.82824575, 686.57736909, 686.3266299 , 686.07602812,
         685.82556368, 685.57523653, 685.3250466 , 685.07499383,
         684.82507816, 684.57529953, 684.32565788, 684.07615313,
         683.82678524, 683.57755415, 683.32845977, 683.07950207,
         682.83068097, 682.5819964 , 682.33344832, 682.08503665,
         681.83676133, 681.58862231, 681.34061951, 681.09275288,
         680.84502234, 680.59742785, 680.34996933, 680.10264672,
         679.85545995, 679.60840898, 679.36149372, 679.11471412,
         678.86807011, 678.62156164, 678.37518863, 678.12895102,
         677.88284875, 677.63688175, 677.39104996, 677.14535332,
         676.89979175]),
  )
# ---
# name: test_live_oil_density
  array([702.1346612 , 701.87542865, 701.61633703, 701.35738629,
         701.09857638, 700.83990723, 700.5813788 , 700.32299103,
         700.06474387, 699.80663726, 699.54867114, 699.29084547,
         699.03316018, 698.77561522, 698.51821054, 698.26094608,
         698.00382178, 697.74683759, 697.48999345, 697.23328931,
         696.9767251 , 696.72030078, 696.46401629, 696.20787156,
         695.95186655, 695.69600119, 695.44027543, 695.18468922,
         694.92924249, 694.67393518, 694.41876725, 694.16373862,
         693.90884926, 693.65409908, 693.39948805, 693.14501609,
         692.89068316, 692.63648919, 692.38243412, 692.1285179 ,
         691.87474047, 691.62110176, 691.36760173, 691.11424031,
         690.86101743, 690.60793305, 690.35498711, 690.10217953,
         689.84951027, 689.59697926, 689.34458645, 689.09233177,
         688.84021517, 688.58823657, 688.33639594, 688.08469319,
         687.83312828, 687.58170114, 687.33041171, 687.07925994,
         686.82824575, 686.57736909, 686.3266299 , 686.07602812,
         685.82556368, 685.57523653, 685.3250466 , 685.07499383,
         684.82507816, 684.57529953, 684.32565788, 684.07615313,
         683.82678524, 683.57755415, 683.32845977, 683.07950207,
         682.83068097, 682.5819964 , 682.33344832, 682.08503665,
         681.83676133, 681.58862231, 681.34061951, 681.09275288,
         680.84502234, 680.59742785, 680.34996933, 680.10264672,
         679.85545995, 679.60840898, 679.36149372, 679.11471412,
         678.86807011, 678.62156164, 678.37518863, 678.12895102,
         677.88284875, 677.63688175, 677.39104996, 677.14535332,
         676.89979175])
# ---
# name: test_live_oil_han_batzle
  tuple(
    array([1068.77712019, 1068.26098675, 1067.74697984, 1067.23509946,
         1066.72534561, 1066.21771829, 1065.71221751, 1065.20884325,
         1064.70759553, 1064.20847434, 1063.71147969, 1063.21661156,
         1062.72386997, 1062.2332549 , 1061.74476637, 1061.25840437,
         1060.77416891, 1060.29205997, 1059.81207757, 1059.3342217 ,
         1058.85849236, 1058.38488955, 1057.91341327, 1057.44406353,
         1056.97684031, 1056.51174363, 1056.04877348, 1055.58792986,
         1055.12921278, 1054.67262222, 1054.2181582 , 1053.76582071,
         1053.31560975, 1052.86752532, 1052.42156742, 1051.97773606,
         1051.53603123, 1051.09645293, 1050.65900116, 1050.22367592,
         1049.79047721, 1049.35940504, 1048.9304594 , 1048.50364029,
         1048.07894771, 1047.65638166, 1047.23594215, 1046.81762916,
         1046.40144271, 1045.98738279, 1045.5754494 , 1045.16564254,
         1044.75796222, 1044.35240843, 1043.94898116, 1043.54768043,
         1043.14850624, 1042.75145857, 1042.35653743, 1041.96374283,
         1041.57307476, 1041.18453322, 1040.79811821, 1040.41382974,
         1040.03166779, 1039.65163238, 1039.2737235 , 1038.89794115,
         1038.52428533, 1038.15275605, 1037.78335329, 1037.41607707,
         1037.05092738, 1036.68790422, 1036.32700759, 1035.9682375 ,
         1035.61159394, 1035.2570769 , 1034.9046864 , 1034.55442243,
         1034.206285  , 1033.86027409, 1033.51638972, 1033.17463188,
         1032.83500057, 1032.49749579, 1032.16211754, 1031.82886583,
         1031.49774065, 1031.16874199, 1030.84186988, 1030.51712429,
         1030.19450523, 1029.87401271, 1029.55564671, 1029.23940725,
         1028.92529432, 1028.61330793, 1028.30344806, 1027.99571473,
         1027.69010793]),
    array([708.59222267, 708.46131387, 708.33027823, 708.19911735,
         708.06783277, 707.93642603, 707.8048986 , 707.67325196,
         707.54148754, 707.40960673, 707.2776109 , 707.14550139,
         707.01327953, 706.88094659, 706.74850384, 706.61595251,
         706.4832938 , 706.35052891, 706.21765898, 706.08468516,
         705.95160855, 705.81843024, 705.6851513 , 705.55177277,
         705.41829567, 705.28472101, 705.15104977, 705.0172829 ,
         704.88342135, 704.74946603, 704.61541785, 704.4812777 ,
         704.34704644, 704.21272491, 704.07831395, 703.94381437,
         703.80922697, 703.67455253, 703.53979181, 703.40494556,
         703.27001451, 703.13499939, 702.9999009 , 702.86471972,
         702.72945653, 702.594112  , 702.45868676, 702.32318146,
         702.18759672, 702.05193314, 701.91619131, 701.78037183,
         701.64447527, 701.50850218, 701.37245311, 701.2363286 ,
         701.10012917, 700.96385535, 700.82750762, 700.6910865 ,
         700.55459245, 700.41802596, 700.28138749, 700.14467748,
         700.00789639, 699.87104465, 699.73412269, 699.59713091,
         699.46006974, 699.32293956, 699.18574077, 699.04847375,
         698.91113888, 698.77373652, 698.63626703, 698.49873076,
         698.36112806, 698.22345925, 698.08572467, 697.94792464,
         697.81005948, 697.67212948, 697.53413496, 697.3960762 ,
         697.2579535 , 697.11976712, 696.98151736, 696.84320448,
         696.70482873, 696.56639039, 696.42788969, 696.28932688,
         696.15070221, 696.0120159 , 695.87326819, 695.7344593 ,
         695.59558945, 695.45665885, 695.31766771, 695.17861623,
         695.03950461]),
  )
# ---
# name: test_live_oil_velocity
  array([979.59467192, 979.10357976, 978.6165661 , 978.1336357 ,
         977.65479338, 977.18004389, 976.70939204, 976.2428426 ,
         975.78040036, 975.32207008, 974.86785654, 974.41776452,
         973.97179879, 973.52996412, 973.09226528, 972.65870703,
         972.22929413, 971.80403135, 971.38292345, 970.96597518,
         970.55319131, 970.14457658, 969.74013575, 969.33987356,
         968.94379478, 968.55190414, 968.16420639, 967.78070627,
         967.40140852, 967.02631788, 966.65543909, 966.28877688,
         965.926336  , 965.56812115, 965.21413709, 964.86438853,
         964.51888021, 964.17761684, 963.84060314, 963.50784385,
         963.17934366, 962.85510732, 962.53513951, 962.21944497,
         961.90802839, 961.6008945 , 961.29804799, 960.99949357,
         960.70523594, 960.41527981, 960.12962988, 959.84829083,
         959.57126738, 959.29856421, 959.03018601, 958.76613748,
         958.5064233 , 958.25104817, 958.00001675, 957.75333375,
         957.51100383, 957.27303168, 957.03942198, 956.81017939,
         956.58530861, 956.36481428, 956.1487011 , 955.93697372,
         955.72963681, 955.52669503, 955.32815306, 955.13401554,
         954.94428714, 954.75897252, 954.57807633, 954.40160322,
         954.22955785, 954.06194486, 953.89876891, 953.74003464,
         953.5857467 , 953.43590973, 953.29052836, 953.14960724,
         953.01315101, 952.8811643 , 952.75365174, 952.63061798,
         952.51206763, 952.39800532, 952.28843569, 952.18336335,
         952.08279294, 951.98672906, 951.89517635, 951.80813941,
         951.72562287, 951.64763134, 951.57416943, 951.50524174,
         951.4408529 ])
# ---
# name: test_max_gor_standing
  array([154.25007746, 154.891422  , 155.53086112, 156.16839429,
         156.80402105, 157.43774098, 158.06955373, 158.69945901,
         159.32745655, 159.95354616, 160.5777277 , 161.20000108,
         161.82036624, 162.43882319, 163.05537198, 163.67001272,
         164.28274556, 164.89357067, 165.50248831, 166.10949877,
         166.71460236, 167.31779945, 167.91909048, 168.51847589,
         169.11595618, 169.71153189, 170.30520361, 170.89697195,
         171.48683758, 172.0748012 , 172.66086354, 173.24502538,
         173.82728753, 174.40765084, 174.9861162 , 175.56268452,
         176.13735676, 176.71013392, 177.28101702, 177.85000711,
         178.41710529, 178.98231267, 179.54563043, 180.10705974,
         180.66660182, 181.22425792, 181.78002933, 182.33391735,
         182.88592332, 183.43604861, 183.98429461, 184.53066276,
         185.0751545 , 185.61777132, 186.15851473, 186.69738625,
         187.23438744, 187.7695199 , 188.30278524, 188.83418509,
         189.36372111, 189.891395  , 190.41720845, 190.94116321,
         191.46326104, 191.9835037 , 192.50189301, 193.0184308 ,
         193.5331189 , 194.04595919, 194.55695356, 195.06610392,
         195.5734122 , 196.07888036, 196.58251038, 197.08430423,
         197.58426395, 198.08239155, 198.5786891 , 199.07315866,
         199.56580231, 200.05662218, 200.54562038, 201.03279905,
         201.51816036, 202.00170649, 202.48343962, 202.96336197,
         203.44147577, 203.91778325, 204.39228669, 204.86498835,
         205.33589053, 205.80499554, 206.27230568, 206.73782331,
         207.20155076, 207.66349042, 208.12364464, 208.58201584,
         209.0386064 ])
# ---
# name: test_oil_prop
  tuple(
    array([1068.77712019, 1068.26098675, 1067.74697984, 1067.23509946,
         1066.72534561, 1066.21771829, 1065.71221751, 1065.20884325,
         1064.70759553, 1064.20847434, 1063.71147969, 1063.21661156,
         1062.72386997, 1062.2332549 , 1061.74476637, 1061.25840437,
         1060.77416891, 1060.29205997, 1059.81207757, 1059.3342217 ,
         1058.85849236, 1058.38488955, 1057.91341327, 1057.44406353,
         1056.97684031, 1056.51174363, 1056.04877348, 1055.58792986,
         1055.12921278, 1054.67262222, 1054.2181582 , 1053.76582071,
         1053.31560975, 1052.86752532, 1052.42156742, 1051.97773606,
         1051.53603123, 1051.09645293, 1050.65900116, 1050.22367592,
         1049.79047721, 1049.35940504, 1048.9304594 , 1048.50364029,
         1048.07894771, 1047.65638166, 1047.23594215, 1046.81762916,
         1046.40144271, 1045.98738279, 1045.5754494 , 1045.16564254,
         1044.75796222, 1044.35240843, 1043.94898116, 1043.54768043,
         1043.14850624, 1042.75145857, 1042.35653743, 1041.96374283,
         1041.57307476, 1041.18453322, 1040.79811821, 1040.41382974,
         1040.03166779, 1039.65163238, 1039.2737235 , 1038.89794115,
         1038.52428533, 1038.15275605, 1037.78335329, 1037.41607707,
         1037.05092738, 1036.68790422, 1036.32700759, 1035.9682375 ,
         1035.61159394, 1035.2570769 , 1034.9046864 , 1034.55442243,
         1034.206285  , 1033.86027409, 1033.51638972, 1033.17463188,
         1032.83500057, 1032.49749579, 1032.16211754, 1031.82886583,
         1031.49774065, 1031.16874199, 1030.84186988, 1030.51712429,
         1030.19450523, 1029.87401271, 1029.55564671, 1029.23940725,
         1028.92529432, 1028.61330793, 1028.30344806, 1027.99571473,
         1027.69010793]),
    array([708.59222267, 708.46131387, 708.33027823, 708.19911735,
         708.06783277, 707.93642603, 707.8048986 , 707.67325196,
         707.54148754, 707.40960673, 707.2776109 , 707.14550139,
         707.01327953, 706.88094659, 706.74850384, 706.61595251,
         706.4832938 , 706.35052891, 706.21765898, 706.08468516,
         705.95160855, 705.81843024, 705.6851513 , 705.55177277,
         705.41829567, 705.28472101, 705.15104977, 705.0172829 ,
         704.88342135, 704.74946603, 704.61541785, 704.4812777 ,
         704.34704644, 704.21272491, 704.07831395, 703.94381437,
         703.80922697, 703.67455253, 703.53979181, 703.40494556,
         703.27001451, 703.13499939, 702.9999009 , 702.86471972,
         702.72945653, 702.594112  , 702.45868676, 702.32318146,
         702.18759672, 702.05193314, 701.91619131, 701.78037183,
         701.64447527, 701.50850218, 701.37245311, 701.2363286 ,
         701.10012917, 700.96385535, 700.82750762, 700.6910865 ,
         700.55459245, 700.41802596, 700.28138749, 700.14467748,
         700.00789639, 699.87104465, 699.73412269, 699.59713091,
         699.46006974, 699.32293956, 699.18574077, 699.04847375,
         698.91113888, 698.77373652, 698.63626703, 698.49873076,
         698.36112806, 698.22345925, 698.08572467, 697.94792464,
         697.81005948, 697.67212948, 697.53413496, 697.3960762 ,
         697.2579535 , 697.11976712, 696.98151736, 696.84320448,
         696.70482873, 696.56639039, 696.42788969, 696.28932688,
         696.15070221, 696.0120159 , 695.87326819, 695.7344593 ,
         695.59558945, 695.45665885, 695.31766771, 695.17861623,
         695.03950461]),
    array([8.09413936e+08, 8.08482970e+08, 8.07555743e+08, 8.06632249e+08,
         8.05712485e+08, 8.04796446e+08, 8.03884127e+08, 8.02975524e+08,
         8.02070632e+08, 8.01169447e+08, 8.00271965e+08, 7.99378180e+08,
         7.98488088e+08, 7.97601685e+08, 7.96718966e+08, 7.95839925e+08,
         7.94964560e+08, 7.94092864e+08, 7.93224833e+08, 7.92360462e+08,
         7.91499747e+08, 7.90642683e+08, 7.89789265e+08, 7.88939489e+08,
         7.88093349e+08, 7.87250841e+08, 7.86411960e+08, 7.85576702e+08,
         7.84745060e+08, 7.83917032e+08, 7.83092612e+08, 7.82271795e+08,
         7.81454576e+08, 7.80640950e+08, 7.79830913e+08, 7.79024460e+08,
         7.78221586e+08, 7.77422287e+08, 7.76626556e+08, 7.75834391e+08,
         7.75045785e+08, 7.74260733e+08, 7.73479232e+08, 7.72701277e+08,
         7.71926861e+08, 7.71155981e+08, 7.70388632e+08, 7.69624809e+08,
         7.68864508e+08, 7.68107722e+08, 7.67354448e+08, 7.66604681e+08,
         7.65858416e+08, 7.65115648e+08, 7.64376373e+08, 7.63640585e+08,
         7.62908279e+08, 7.62179452e+08, 7.61454099e+08, 7.60732214e+08,
         7.60013792e+08, 7.59298830e+08, 7.58587322e+08, 7.57879264e+08,
         7.57174650e+08, 7.56473477e+08, 7.55775739e+08, 7.55081432e+08,
         7.54390551e+08, 7.53703092e+08, 7.53019049e+08, 7.52338419e+08,
         7.51661196e+08, 7.50987375e+08, 7.50316953e+08, 7.49649925e+08,
         7.48986285e+08, 7.48326030e+08, 7.47669155e+08, 7.47015655e+08,
         7.46365526e+08, 7.45718762e+08, 7.45075361e+08, 7.44435316e+08,
         7.43798624e+08, 7.43165280e+08, 7.42535279e+08, 7.41908618e+08,
         7.41285291e+08, 7.40665294e+08, 7.40048623e+08, 7.39435273e+08,
         7.38825241e+08, 7.38218520e+08, 7.37615108e+08, 7.37014999e+08,
         7.36418190e+08, 7.35824675e+08, 7.35234451e+08, 7.34647514e+08,
         7.34063858e+08]),
  )
# ---
# name: test_oil_prop_bw
  tuple(
    array([979.59467192, 979.10357976, 978.6165661 , 978.1336357 ,
         977.65479338, 977.18004389, 976.70939204, 976.2428426 ,
         975.78040036, 975.32207008, 974.86785654, 974.41776452,
         973.97179879, 973.52996412, 973.09226528, 972.65870703,
         972.22929413, 971.80403135, 971.38292345, 970.96597518,
         970.55319131, 970.14457658, 969.74013575, 969.33987356,
         968.94379478, 968.55190414, 968.16420639, 967.78070627,
         967.40140852, 967.02631788, 966.65543909, 966.28877688,
         965.926336  , 965.56812115, 965.21413709, 964.86438853,
         964.51888021, 964.17761684, 963.84060314, 963.50784385,
         963.17934366, 962.85510732, 962.53513951, 962.21944497,
         961.90802839, 961.6008945 , 961.29804799, 960.99949357,
         960.70523594, 960.41527981, 960.12962988, 959.84829083,
         959.57126738, 959.29856421, 959.03018601, 958.76613748,
         958.5064233 , 958.25104817, 958.00001675, 957.75333375,
         957.51100383, 957.27303168, 957.03942198, 956.81017939,
         956.58530861, 956.36481428, 956.1487011 , 955.93697372,
         955.72963681, 955.52669503, 955.32815306, 955.13401554,
         954.94428714, 954.75897252, 954.57807633, 954.40160322,
         954.22955785, 954.06194486, 953.89876891, 953.74003464,
         953.5857467 , 953.43590973, 953.29052836, 953.14960724,
         953.01315101, 952.8811643 , 952.75365174, 952.63061798,
         952.51206763, 952.39800532, 952.28843569, 952.18336335,
         952.08279294, 951.98672906, 951.89517635, 951.80813941,
         951.72562287, 951.64763134, 951.57416943, 951.50524174,
         951.4408529 ]),
    array([702.1346612 , 701.87542865, 701.61633703, 701.35738629,
         701.09857638, 700.83990723, 700.5813788 , 700.32299103,
         700.06474387, 699.80663726, 699.54867114, 699.29084547,
         699.03316018, 698.77561522, 698.51821054, 698.26094608,
         698.00382178, 697.74683759, 697.48999345, 697.23328931,
         696.9767251 , 696.72030078, 696.46401629, 696.20787156,
         695.95186655, 695.69600119, 695.44027543, 695.18468922,
         694.92924249, 694.67393518, 694.41876725, 694.16373862,
         693.90884926, 693.65409908, 693.39948805, 693.14501609,
         692.89068316, 692.63648919, 692.38243412, 692.1285179 ,
         691.87474047, 691.62110176, 691.36760173, 691.11424031,
         690.86101743, 690.60793305, 690.35498711, 690.10217953,
         689.84951027, 689.59697926, 689.34458645, 689.09233177,
         688.84021517, 688.58823657, 688.33639594, 688.08469319,
         687.83312828, 687.58170114, 687.33041171, 687.07925994,
         686.82824575, 686.57736909, 686.3266299 , 686.07602812,
         685.82556368, 685.57523653, 685.3250466 , 685.07499383,
         684.82507816, 684.57529953, 684.32565788, 684.07615313,
         683.82678524, 683.57755415, 683.32845977, 683.07950207,
         682.83068097, 682.5819964 , 682.33344832, 682.08503665,
         681.83676133, 681.58862231, 681.34061951, 681.09275288,
         680.84502234, 680.59742785, 680.34996933, 680.10264672,
         679.85545995, 679.60840898, 679.36149372, 679.11471412,
         678.86807011, 678.62156164, 678.37518863, 678.12895102,
         677.88284875, 677.63688175, 677.39104996, 677.14535332,
         676.89979175]),
    array([6.73772438e+08, 6.72848542e+08, 6.71931219e+08, 6.71020460e+08,
         6.70116256e+08, 6.69218598e+08, 6.68327478e+08, 6.67442888e+08,
         6.66564819e+08, 6.65693261e+08, 6.64828208e+08, 6.63969651e+08,
         6.63117581e+08, 6.62271990e+08, 6.61432871e+08, 6.60600214e+08,
         6.59774013e+08, 6.58954259e+08, 6.58140945e+08, 6.57334062e+08,
         6.56533603e+08, 6.55739561e+08, 6.54951927e+08, 6.54170694e+08,
         6.53395856e+08, 6.52627403e+08, 6.51865330e+08, 6.51109629e+08,
         6.50360293e+08, 6.49617314e+08, 6.48880686e+08, 6.48150401e+08,
         6.47426454e+08, 6.46708836e+08, 6.45997541e+08, 6.45292563e+08,
         6.44593895e+08, 6.43901531e+08, 6.43215463e+08, 6.42535686e+08,
         6.41862193e+08, 6.41194978e+08, 6.40534035e+08, 6.39879357e+08,
         6.39230939e+08, 6.38588775e+08, 6.37952858e+08, 6.37323183e+08,
         6.36699745e+08, 6.36082536e+08, 6.35471553e+08, 6.34866789e+08,
         6.34268239e+08, 6.33675897e+08, 6.33089758e+08, 6.32509817e+08,
         6.31936069e+08, 6.31368508e+08, 6.30807130e+08, 6.30251929e+08,
         6.29702902e+08, 6.29160042e+08, 6.28623345e+08, 6.28092806e+08,
         6.27568422e+08, 6.27050186e+08, 6.26538096e+08, 6.26032146e+08,
         6.25532333e+08, 6.25038652e+08, 6.24551098e+08, 6.24069669e+08,
         6.23594359e+08, 6.23125165e+08, 6.22662083e+08, 6.22205110e+08,
         6.21754241e+08, 6.21309474e+08, 6.20870804e+08, 6.20438228e+08,
         6.20011742e+08, 6.19591344e+08, 6.19177031e+08, 6.18768798e+08,
         6.18366643e+08, 6.17970563e+08, 6.17580555e+08, 6.17196617e+08,
         6.16818744e+08, 6.16446936e+08, 6.16081189e+08, 6.15721500e+08,
         6.15367867e+08, 6.15020289e+08, 6.14678761e+08, 6.14343284e+08,
         6.14013853e+08, 6.13690467e+08, 6.13373125e+08, 6.13061824e+08,
         6.12756562e+08]),
  )
# ---
